--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,12 @@
 body {
   font-family: Palatino;
 }
+#reading-list {
+  display: flex;
+  max-width: 100vw;
+  justify-content: space-between;
+}
+
 
 .title {
   font-size: 18px;
@@ -27,8 +33,5 @@ body {
   text-align: center;
   padding: 10px;
   margin: 20px;
-}
-#reading-list {
-  display: flex;
-  max-width: 100vw;
+  flex: auto;
 }
